--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -472,7 +472,7 @@ jobs:
         if: always()
         uses: slackapi/slack-github-action@v1
         with:
-          webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
+          webhook-url: ${{ secrets.SLACK_WEBHOOK_URL }}
           payload: |
             {
               "text": "✅ Deployed to Staging: ${{ github.sha }}",
@@ -546,7 +546,7 @@ jobs:
         if: success()
         uses: slackapi/slack-github-action@v1
         with:
-          webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
+          webhook-url: ${{ secrets.SLACK_WEBHOOK_URL }}
           payload: |
             {
               "text": "🚀 Deployed to Production: ${{ github.sha }}",
@@ -565,7 +565,7 @@ jobs:
         if: failure()
         uses: slackapi/slack-github-action@v1
         with:
-          webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
+          webhook-url: ${{ secrets.SLACK_WEBHOOK_URL }}
           payload: |
             {
               "text": "❌ Production Deployment Failed: ${{ github.sha }}",
